Fixed overflow issues

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -191,20 +191,22 @@ section {
         width: $person-small-width;
         height: auto;
         display: block;
-				$flyInTime: $time * 5;
-				@include transition(left $flyInTime ease-in-out, right $flyInTime ease-in-out);
+				$flyInTime: $time * 3;
+				opacity: 0;
+				@include transition(left $flyInTime ease-in-out, right $flyInTime ease-in-out, opacity $flyInTime ease-in-out);
         @media #{$medium-up} { width: $person-large-width; }
         &:first-of-type {
-          left: -5%;
+          left: 25%;
           margin-left: -1 * $person-small-width;
           @media #{$medium-up} { margin-left: (-1 * $person-large-width) + 10; }
         }
         &:last-of-type {
-          right: -5%;
+          right: 25%;
           margin-right: -1 * $person-small-width;
           @media #{$medium-up} { margin-right: (-1 * $person-large-width) + 10; }
         }
 				&.go {
+					opacity: 1;
 					&:first-of-type { left: 50%; }
 					&:last-of-type { right: 50%; }
 				}
